crates/karva_language_server/tests/e2e/snapshots/e2e__definition__follows_project_fixture_imports_outside_open_document_selection.snap
---
source: crates/karva_language_server/tests/e2e/definition.rs
expression: workspace.normalize(response)
---
{
  "range": {
    "end": {
      "character": 12,
      "line": 2
    },
    "start": {
      "character": 4,
      "line": 2
    }
  },
  "uri": "file:///project/support/providers.py"
}
