crates/karva_language_server/tests/e2e/snapshots/e2e__definition__resolves_nearest_fixture_across_multiple_nested_conftests.snap
---
source: crates/karva_language_server/tests/e2e/definition.rs
expression: workspace.normalize(response)
---
{
  "range": {
    "end": {
      "character": 12,
      "line": 3
    },
    "start": {
      "character": 4,
      "line": 3
    }
  },
  "uri": "file:///project/package/inner/conftest.py"
}
